--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,12 @@
     "editor.rulers": [80],
     "cSpell.words": [
         "acodec",
+        "bitrates",
         "geoip",
         "geolite",
         "imageio",
         "itag",
+        "kbps",
         "moviepy",
         "pytube",
         "pytubefix",
