Package the app in executable

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "imageio",
         "itag",
         "kbps",
+        "MEIPASS",
         "moviepy",
         "pytube",
         "pytubefix",
