Improved OAuth and let user choose video format

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "geoip",
         "geolite",
         "imageio",
+        "innertube",
         "itag",
         "kbps",
         "MEIPASS",
